--- a/site/index.html
+++ b/site/index.html
@@ -3,9 +3,9 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Hello Test!</title>
+	<title>Hello Test! Hi Aarna, how are you?!</title>
 </head>
 <body>
-<h1>Hello Test! You're great!</h1>
+<h1>Hello Test!</h1>
 </body>
 </html>
